# esp32_lcd_ili9488

./: CMakeLists.txt
components/lvgl_esp32_drivers/lvgl_tft/: ili9488.h
components/spi_controller/: CMakeLists.txt  Kconfig  spi_interface.cpp  spi_interface.h
components/tft_drivers/: CMakeLists.txt  Kconfig  lcd.cpp  lcd.h
components/tft_drivers/drivers/: ili9488.cpp  ili9488.h  lcd_ili9488.cpp  lcd_ili9488.h  lcd_io.cpp  lcd_io.h
main/: main.cpp
